--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
         "@tsparticles/engine": "^3.8.1",
         "@tsparticles/react": "^3.0.0",
         "@tsparticles/slim": "^3.8.1",
+        "@types/leaflet": "^1.9.21",
         "atmn": "^0.0.28",
         "autumn-js": "^0.1.43",
         "bcrypt": "^6.0.0",
-        "better-auth": "1.3.10",
+        "better-auth": "^1.4.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
@@ -66,12 +67,14 @@
         "estree-walker": "2.0.2",
         "framer-motion": "^12.23.24",
         "input-otp": "^1.4.2",
+        "leaflet": "^1.9.4",
         "lucide-react": "^0.552.0",
         "mini-svg-data-uri": "^1.4.4",
         "motion": "^12.23.24",
         "motion-dom": "^12.23.23",
         "next": "15.3.5",
         "next-themes": "^0.4.6",
+        "pdfkit": "^0.17.2",
         "qss": "^3.0.0",
         "react": "^19.0.0",
         "react-day-picker": "^9.8.0",
@@ -81,6 +84,7 @@
         "react-hook-form": "^7.60.0",
         "react-icons": "^5.5.0",
         "react-intersection-observer": "^10.0.0",
+        "react-leaflet": "^5.0.0",
         "react-resizable-panels": "^3.0.3",
         "react-responsive-masonry": "^2.7.1",
         "react-syntax-highlighter": "^15.6.1",
